--- a/index.html
+++ b/index.html
@@ -63,8 +63,40 @@
                 </div>
             </div>
         </section>
+        <section id="interface3">
+            <div class="row">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="images/inter3.png" class="card-img" alt="interface3">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">A Quick Market-Driven Guide to Choosing a 'Profitable' Start-Up Name</h5>
+                                <p class="card-text">
+                                    <medium class="text-muted">And what 'profit' has to do with naming your startup</medium>
+                                    </span>
+                                </p>
+                            </div>
+                            <div class="josiah d-flex align-items-center bg-light">
+                                <div>
+                                    <img class="image-fluid" src="images/Josiah.jpg" alt="josiah">
+                                </div>
+                                <p class="col p-2 m-0">Josiah humphrey <br> <small class="text-muted">Jun 23 . 9 min read</small>
+                                    <div class="icon align-middle"> <i class="far fa-bookmark"></i> <i class="fas fa-angle-down"></i> </div>
+                                </p>
+                            </div>
 
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
+    <!-- BootstrapCDN js -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js" integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
