--- a/index.html
+++ b/index.html
@@ -63,6 +63,54 @@
                 </div>
             </div>
         </section>
+        <hr>
+        <section id="interface2" class="interface-2">
+            <div class="row">
+                <div class="box">
+                    <header>
+                        <p>Users right now</p>
+                        <h1>90</h1>
+                        <span>page views per minute</span>
+                    </header>
+                    <hr>
+                    <div class="section">
+                        <img src="images/graphique.png" alt="graphique">
+                        <table>
+                            <tr>
+                                <th><span> Top Active Pages</span></th>
+                                <th class="tac"><span>Users</span></th>
+                            </tr>
+                            <tr>
+                                <th>/actualites/so...nfants-femmes</th>
+                                <th class="tac">46</th>
+                            </tr>
+                            <tr>
+                                <th>/actualites/pol...arme-politique</th>
+                                <th class="tac">8</th>
+                            </tr>
+                            <tr>
+                                <th>/actualites/so...existe-femmes</th>
+                                <th class="tac">3</th>
+                            </tr>
+                            <tr>
+                                <th>/p/159944294/...ee-de-meurtre</th>
+                                <th class="tac">3</th>
+                            </tr>
+                            <tr>
+                                <th class="pb">/programmes-tele</th>
+                                <th class="tac pb">3</th>
+                            </tr>
+                        </table>
+                    </div>
+
+                    <footer>
+                        <p>REAL-TIME REPORT</p>
+                        <i>›</i>
+                    </footer>
+                </div>
+            </div>
+        </section>
+        <hr>
         <section id="interface3">
             <div class="row">
                 <div class="card mb-3" style="max-width: 540px;">
